--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon --watch ./server.js --ext js --exec \"node ./server.js\"",
-    
+    "dev": "nodemon --watch . --ext js,json --exec \"node ./server.js\"",
     "start": "node ./server.js"
   },
   "keywords": [],
@@ -16,7 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.19.2"
+    "mongoose": "^8.19.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
